Add REAL 90 line advance option with perpendicular row moves

--- a/templates/index.html
+++ b/templates/index.html
@@ -250,6 +250,7 @@
                 <select id="line_advance">
                   <option value="soft" selected>Obecne (łagodne)</option>
                   <option value="turn90">Klasyczne: obrót 90 + przejazd prostopadły</option>
+                  <option value="real90">REAL 90: przejazdy prostopadłe, rzędy równoległe</option>
                 </select>
               </div>
             </div>
@@ -461,6 +462,7 @@
                 <select id="t_line_advance">
                   <option value="soft" selected>Obecne (łagodne)</option>
                   <option value="turn90">Klasyczne: obrót 90 + przejazd prostopadły</option>
+                  <option value="real90">REAL 90: przejazdy prostopadłe, rzędy równoległe</option>
                 </select>
               </div>
             </div>
