Add ltr+rtl scan mode

--- a/templates/index.html
+++ b/templates/index.html
@@ -301,6 +301,7 @@
                 <select id="scan">
                   <option value="serpentine" selected>serpentine</option>
                   <option value="ltr">ltr</option>
+                  <option value="ltr+rtl">ltr+rtl</option>
                 </select>
               </div>
             </div>
@@ -512,6 +513,7 @@
                 <select id="t_scan">
                   <option value="serpentine" selected>serpentine</option>
                   <option value="ltr">ltr</option>
+                  <option value="ltr+rtl">ltr+rtl</option>
                 </select>
               </div>
             </div>
